# Veeam-AIops

./: .coverage  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  pyproject.toml  server.json  smithery.yaml
.github/workflows/: mcp-publish.yml  publish.yml
docs/: VERIFICATION.md
mcp_server/: __init__.py  _shared.py  server.py
mcp_server/tools/: __init__.py  backups.py  diagnostics.py  infrastructure.py  jobs.py  overview.py  repositories.py  restore.py  sessions.py  undo.py
skills/veeam-aiops/: SKILL.md
skills/veeam-aiops/references/: agent-guardrails.md  capabilities.md  cli-reference.md  setup-guide.md
tests/: conftest.py  test_cli_reads.py  test_cli_writes.py  test_cli_writes_extra.py  test_config_scheme.py  test_connection.py  test_doctor.py  test_gov_audit.py  test_gov_decorators.py  test_gov_patterns.py  test_gov_policy.py  test_governance_persistence.py  test_init.py  test_mcp_shared.py  test_mcp_tools.py  test_ops_analyses.py  test_ops_diagnostics.py  test_optional_fields.py  test_readonly.py  test_secretstore.py  test_self_lockout.py  test_smoke.py  test_undo_executor.py
veeam_aiops/: __init__.py  config.py  connection.py  doctor.py  secretstore.py
veeam_aiops/cli/: __init__.py  _common.py  _root.py  backup.py  diagnostics.py  doctor.py  infrastructure.py  init.py  job.py  overview.py  repository.py  restore.py  secret.py  session.py  undo.py
veeam_aiops/governance/: __init__.py  audit.py  budget.py  decorators.py  outcome.py  paths.py  patterns.py  policy.py  readonly.py  sanitize.py  undo.py
veeam_aiops/ops/: __init__.py  backups.py  diagnostics.py  infrastructure.py  jobs.py  overview.py  repositories.py  restore.py  sessions.py
